Language JSON. Remove unused vars.

--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -1,252 +1,8 @@
 {
-  "...": "...",
-  "add_application": "Добавить заявку",
-  "add_new_order": "+ Добавить заявку",
-  "answered": "откликнулся",
-  "apartment": "Квартира",
-  "auto_search": "Автопоиск",
-  "auto_search.description": "Планируете путешествие заранее? Создайте поиск предложений на доставку, чтобы сделать ваше путешествие выгоднее. Мы будем высылать новые предложения по выбранному Вами направлению.",
-  "avatar.popup.header": "Ваш аватар",
-  "avatar_upload_text": "Пожалуйста загрузите ваш Аватар",
-  "back": "Назад",
-  "back_to_search_results": "Назад к результатам поиска",
-  "breadcrumbs.account": "Аккаунт",
-  "breadcrumbs.completed": "Завершённые",
-  "breadcrumbs.home": "Главная",
-  "breadcrumbs.my_parcels": "Мои посылки",
-  "breadcrumbs.payments": "Платежи",
-  "breadcrumbs.personal_info": "Личная информация",
-  "breadcrumbs.rules": "Правила",
-  "breadcrumbs.search_parcel": "Поиск посылки",
-  "breadcrumbs.search_suitcase": "Поиск чемодана",
-  "building": "Корпус",
-  "calendar": "Календарь",
-  "category": "Категория",
-  "centimeter1": "сантиметр",
-  "centimeter2": "(сантиметр)",
-  "centimeter3": "см",
-  "centimeter4": "(см)",
-  "centimeter5": "см.",
-  "centimeter6": "(см.)",
-  "change_search_request": "Изменить параметры поиска",
-  "chat_warning": "Пожалуйста общайтесь только в этом чате, иначе мы не сможем помочь Вам в разрешении конфликтов",
-  "check_and_edit_your_data": "Пожалуйста проверьте данные и отредактируйте при необходимости.",
-  "check_the_box_if_you_agree_with_the_conditions": "Поставьте галочку, если Вы согласны с выбором условий:",
-  "choose_category": "Выберите Категорию",
-  "city": "Город",
-  "close": "Закрыть",
-  "confirmation": "Подтверждение",
-  "confirmation_text": "Пожалуйста, введите код, полученный на номер",
-  "connect": "Связаться",
-  "connect_card": "Привязать карту",
-  "continue_button": "Продолжить",
-  "continue_button_2": "Далее",
-  "cost": "Стоимость",
-  "country": "Страна",
-  "country_code": "Код государства",
-  "courier_pick_up_address": "Адрес получения курьером",
-  "create_new_request": "Создать заявку",
-  "data_check": "Пожалуйста проверьте данные и отредактируйте при необходимости.",
-  "datePicker.nextMonthAriaLabel": "след",
-  "datePicker.nextYearAriaLabel": "след",
-  "datePicker.prevMonthAriaLabel": "пред",
-  "datePicker.prevYearAriaLabel": "пред",
-  "date_of_birth": "Дата рождения",
-  "date_of_expiration": "Дата окончания",
-  "date_of_issue": "Дата выдачи",
-  "declared_value": "Объявленная ценность",
-  "delivery_date": "Дата передачи",
-  "delivery_method_to_courier": "Способ получения курьером",
-  "delivery_method_to_recipient": "Способ передачи получателю",
-  "delivery_price": "Цена доставки",
-  "delivery_time": "Время передачи",
-  "department_code" : "Код подразделения",
-  "deposite" : "Депозит",
-  "deposite.get": "Залог за сохранность (депозит) необходимо внести, когда перевозимая посылка имеет ценность для отправителя. Указанный депозит является повышенной гарантией доставки посылки. Вносимая сумма будет переведена на счет сервиса и после доставки будет переведена обратно. \nВознаграждение за доставку с использованием залога за сохранность больше, чем за аналогичную, но без использования депозита.",
-  "deposite.send": "Залог за сохранность (депозит) отправитель использовать, когда вы планируете отправить посылку имеющую существенную материальную стоимость. При его использовании, путешественник будет обязан внести указанную вами сумму на счет сервиса для обеспечения безопасности. После доставки, путешественник получит сумму депозита обратно на свой счет.\nЗалог за сохранность (депозит) увеличивает стоимость доставки и уменьшает количество путешественников готовых отвезти вашу посылку.",
-  "depth": "Глубина, см",
-  "depth.desc1": "Глубина >1мм and <2000мм",
-  "depth.mm": "Глубина (мм.)",
-  "dimensions": "Габариты",
-  "dots": "...",
-  "edit": "Редактировать",
-  "email_address": "E-mail адрес",
-  "footer.contacts": "Контакты",
-  "footer.copy": "Копирайт",
-  "footer.lang": "Русский, ₽",
-  "footer.rules": "Правила",
-  "footer.send": "Хочу отправить",
-  "footer.support": "Поддержка",
-  "footer.take": "Могу захватить",
-  "from": "Откуда",
-  "gender": "Пол",
-  "gram1": "грамм",
-  "gram2": "(грамм)",
-  "gram3": "г",
-  "gram4": "(г)",
-  "gram5": "г.",
-  "gram6": "(г.)",
-  "height": "Высота, см",
-  "height.desc1": "Высота >1мм and <2000мм",
-  "height.mm": "Высота (мм.)",
-  "home.how_it_works": "Как это работает?",
-  "home.title": "Заголовок о сервисе в две строки",
-  "house": "Дом",
-  "how": "Как?",
-  "international_passport": "Загранпаспорт",
-  "issuing_authority": "Паспорт выдан:",
-  "kilogram1": "килограмм",
-  "kilogram2": "(килограмм)",
-  "kilogram3": "кг",
-  "kilogram4": "(кг)",
-  "kilogram5": "кг.",
-  "kilogram6": "(кг.)",
-  "language_name": "Русский",
-  "load.photo": "Загрузите фото",
-  "load.photo.avatar": "Загрузите аватар",
-  "load.photo.parcel": "Загрузите фото посылки",
-  "load.photo.passport": "Загрузите фото паспорта",
-  "load.selfie": "Загрузите селфи",
-  "load.selfie.passport": "Загрузите селфи с паспортом",
-  "load_document": "Загрузить документ",
-  "login": "Войти",
-  "login.button": "Вход",
-  "login.dont_have_account": "Еще нет аккаунта?",
-  "login.forgot_pass": "Забыли пароль?",
-  "login.remember": "Запомнить меня",
-  "mail_page.how_it_work.1": "Размещаем новую заявку или ищем среди существующих. Выбираем наиболее подходящий вариант.",
-  "mail_page.how_it_work.2": "В специальном чате или с помощью звонка в приложении Parcel договариваемся о способе передачи посылки путешественнику и дальнейшей передачи получателю.",
-  "mail_page.how_it_work.3": "Передаем посылку. Немного времени… и вот уже Путешественник вручает ее получателю. После подтверждения получения посылки мы переводим вознаграждение исполнителю.",
-  "main_page.6b.1.header": "Надежные платежи",
-  "main_page.6b.1.text": "«Parcel» выступает гарантом в финансовых отношениях пользователей сервиса, для чего мы используем надежную платежную систему.",
-  "main_page.6b.2.header": "Бережное отношение",
-  "main_page.6b.2.text": "Вашу посылку доставляет человек, а не компания.",
-  "main_page.6b.3.header": "Служба поддержки",
-  "main_page.6b.3.text": "Наши специалисты службы поддержки всегда рады помочь разобраться в любых вопросах, касающихся использования сервиса.",
-  "main_page.6b.4.header": "Удобные способы оплаты",
-  "main_page.6b.4.text": "Мы используем самые известные способы оплаты и постоянно добавляем новые, для того чтобы сделать наш сервис еще удобнее для вас.",
-  "main_page.6b.5.header": "Ответственность",
-  "main_page.6b.5.text": "Мы заключаем трехсторонний договор, в рамках которого каждая из сторон гарантирует выполнение своих обязательств.",
-  "main_page.6b.6.header": "Постоянное развитие",
-  "main_page.6b.6.text": "Мы совершенствуем наш сервис, повышая его качество для наших пользователей.",
-  "main_page.h1": "Отправляй. Путешествуй. Знакомься!",
-  "main_page.h1.helper": "Отправить документы в Германию, зимнюю куртку во Францию, антибиотики в Италию… и все это как можно быстрее? Мы знаем кто это может отвезти! «Parcel» — это сообщество, в котором путешественники делают этот мир немного ближе.",
-  "main_page.we_have_mobile_app": "Скачайте наше приложение «Parcel» в App Store или Google Play",
-  "main_page.we_have_mobile_app__desc": "Ipsum eatam vid etur, adiatem que con provitaqui dente perumet libus aut reperep udaecti isquiatia di omnim estrupienet, ut voluptatus, con commoluptias eum rerci",
-  "menu_button_send": "Хочу отправить",
-  "menu_button_take": "Могу захватить",
-  "messages": "Сообщения",
-  "messages.from": "Откуда: ",
-  "messages.to": "Куда: ",
-  "millimeter1": "миллиметр",
-  "millimeter2": "(миллиметр)",
-  "millimeter3": "мм",
-  "millimeter4": "(мм)",
-  "millimeter5": "мм.",
-  "millimeter6": "(мм.)",
-  "more_filters": "Больше фильтров",
-  "name": "Имя",
-  "names": "Имя Фамилия",
-  "no": "Нет",
-  "noDataText": "???",
-  "no_deposite": "Без депозита",
-  "no_email_address": "E-mail адрес не указан",
-  "number": "Номер",
-  "open_agreement_window": "Открыть окно согласования",
-  "or_decline": "или отказаться",
-  "our_advantages": "Наши преимущества",
-  "parcel_category": "Категория посылки",
-  "parcel_description": "Описание посылки",
-  "passport_rf": "Паспорт гражданина РФ",
-  "passport_upload_text": "Пожалуйста загрузите фотографию перевого разворота своего паспорта.",
-  "pay_a_deposit_for_safety" : "Могу внести залог за сохранность",
-  "personal.account.info1": "Для того, чтобы начать размещать заявки Вам необходимо подтвердить свою личность. Это помогает сделать наш сервис безопаснее.",
-  "personal.account.info2": "Пожалуйста загрузите фотографию, где вы держите свой паспорт открытым на главном развороте.",
-  "phone_number": "Номер телефона",
-  "pick_up_address": "Адрес передачи",
-  "place_of_birth": "Место рождения",
-  "price.exact": "Точная",
-  "price.negotiated": "Договорная",
-  "product_category": "Категория товара",
-  "publish_request": "Опубликовать заявку",
-  "readmore": "Подробнее",
-  "recipient_data": "Данные получателя",
-  "reconcile_data": "Согласовать данные",
-  "region": "Регион",
-  "register": "Зарегистрироваться",
-  "registration": "Регистрация",
-  "registration.login": "Уже есть аккаунт?",
-  "registration_text": "Мы отправим Вам SMS, чтобы подтвердить номер телефона. Применяются стандартные условия вашего тарифа.",
-  "reward": "Вознаграждение",
-  "save": "Сохранить",
-  "search.find": "Найти",
-  "search.from": "Откуда",
-  "search.select_city": "Выберите город",
-  "search.select_country": "Выберите страну",
-  "search.title": "Поиск посылки",
-  "search.to": "Куда",
-  "search.weight": "кг",
-  "search_for_offers": "Поиск предложений",
-  "security_deposit": "Залог за сохранность",
-  "select_gender": "Выберите пол",
-  "send": "Отправить",
-  "send.additional_search": "Больше фильтров",
-  "send.results_title_": "Найдено",
-  "send.results_title_2": "свободных мест в чемодане",
-  "send_before": "Отправить до",
-  "series": "Серия",
-  "status.deliver": "Доставляю",
-  "status.delivered": "Доставлено",
-  "status.looking_parcel": "Ищу посылку",
-  "status.looking_suitcase": "Ищу чемодан",
-  "status.send": "Отправляю",
-  "status.sent": "Отправлено",
-  "steps.1_of_2": "Шаг 1 / 2",
-  "steps.1_of_3": "Шаг 1 / 3",
-  "steps.2_of_2": "Шаг 2 / 2",
-  "steps.2_of_3": "Шаг 2 / 3",
-  "steps.3_of_3": "Шаг 3 / 3",
-  "steps.passport_rf.1_of_4": "Пасспорт РФ Шаг 1 / 4 Фото паспорта",
-  "steps.passport_rf.2_of_4": "Пасспорт РФ Шаг 2 / 4 Селфи с паспортом",
-  "steps.passport_rf.3_of_4": "Пасспорт РФ Шаг 3 / 4 Паспортные данные",
-  "steps.passport_rf.4_of_4": "Пасспорт РФ Шаг 4 / 4 Прописка",
-  "steps.passport_z.1_of_3": "Занранпаспорт Шаг 1 / 3 Фото паспорта",
-  "steps.passport_z.2_of_3": "Занранпаспорт Шаг 2 / 3 Селфи с паспортом",
-  "steps.passport_z.3_of_3": "Занранпаспорт Шаг 3 / 3 Паспортные данные",
-  "street": "Улица",
-  "suitcase.free_space": "свободных мест в чемодане",
-  "suitcase.search": "Поиск чемодана",
-  "sum": "Сумма",
-  "surname": "Фамилия",
-  "take.additional_search": "Расширенный поиск",
-  "take.from": "Откуда",
-  "take.parcel_search": "Поиск посылки",
-  "take.results_title_1": "Найдено",
-  "take.results_title_2": "желающих отправить посылку",
-  "take.search": "Искать",
-  "take.to": "Куда",
-  "take_consolidated_cargo": "Могу взять сборный груз",
-  "tasks.active": "Активные",
-  "tasks.completed": "Завершённые",
-  "term": "Срок",
-  "tooltip.accept_data": "Кнопка станет активной, когда обе стороны зафиксируют условия в окне согласования.",
-  "tooltip.address.input": "Пояснение к адресу, которое поможет быстрее встретиться – «Кафе Starbucks», кафе «Cinnabon», стойка регистрации №126 в аэропорту и т.д.",
-  "tooltip.pledge": "При использовании депозита путешественник переводит указанную сумму на счёт сервиса для обеспечения безопасности доставки. После доставки он получит сумму депозита обратно в полном объёме.",
-  "transfer_method": "Способ передачи",
-  "transfer_method_to_recipient": "Способ передачи получателю",
-  "unit.gr": "гр",
-  "unit.mm": "мм",
-  "upload_photo": "Загрузить фото",
-  "we_found": "по Вашим параметрам мы нашли",
-  "we_have_mobile_app": "У нас есть мобильное приложение!",
-  "weight": "Вес, кг",
-  "weight.desc1": "Вес >1г и <20000г",
-  "weight.g": "Вес (г.)",
-  "what_do_you_need": "Что Вам необходимо?",
-  "where": "Где?",
-  "where_to": "Куда",
-  "width": "Ширина, см",
-  "width.desc1": "Ширина >1мм and <2000мм",
-  "width.mm": "Ширина (мм.)",
-  "yes": "Да"
+	"...": "...",
+	"add_application": "Добавить заявку",
+	"add_new_order": "+ Добавить заявку",
+	"answered": "откликнулся",
+	"apartment": "Квартира",
+	"auto_search": "Автопоиск"
 }
